Arreglos menores en edicion de vistas

--- a/workspace/locale/es/LC_MESSAGES/django.po
+++ b/workspace/locale/es/LC_MESSAGES/django.po
@@ -1219,6 +1219,9 @@ msgstr "Crear <abbr title='Conjuntos'>Conj.</abbr> datos"
 msgid "APP-ACTIONS-CREATEVIEW"
 msgstr "Crear Vista"
 
+msgid "APP-ACTIONS-EDITVIEW"
+msgstr "Editar Vista"
+
 msgid "APP-EXPAND-TEXT"
 msgstr "Expandir"
 
