--- a/workspace/locale/en/LC_MESSAGES/django.po
+++ b/workspace/locale/en/LC_MESSAGES/django.po
@@ -1225,6 +1225,9 @@ msgstr "Collect Dataset"
 msgid "APP-ACTIONS-CREATEVIEW"
 msgstr "Create Data View"
 
+msgid "APP-ACTIONS-EDITVIEW"
+msgstr "Edit Data View"
+
 msgid "APP-EXPAND-TEXT"
 msgstr "Expand"
 
