--- a/core/locale/en/LC_MESSAGES/django.po
+++ b/core/locale/en/LC_MESSAGES/django.po
@@ -976,6 +976,9 @@ msgstr "Copy &amp; Paste the code below anywhere you want to show this Visualiza
 msgid "ERROR-DUPLICATED-CATEGORY"
 msgstr "Duplicated category"
 
+msgid "ERROR-DUPLICATED-SOURCE"
+msgstr "Duplicated source"
+
 msgid "EXCEPTION-TITLE-UNKNOWN"
 msgstr "Unknown Error"
 
