ajustes search filter en datasets. Refactor total_resources, habia un bug. Paso ManageCommon.scss de CSS a SASS

--- a/workspace/locale/es/LC_MESSAGES/django.po
+++ b/workspace/locale/es/LC_MESSAGES/django.po
@@ -275,7 +275,10 @@ msgid "APP-SEARCH-TEXT"
 msgstr "Buscar"
 
 msgid "APP-SEARCH-TYPE-AND-PRESS-ENTER"
-msgstr "Escriba y presione Enter"
+msgstr "Escriba y presione intro."
+
+msgid "APP-SEARCH-FILTER-TEXT"
+msgstr "Filtrar por título..."
 
 msgid "APP-FIRSTSEARCH-TEXT"
 msgstr "Primera Búsqueda"
