--- a/workspace/locale/en/LC_MESSAGES/django.po
+++ b/workspace/locale/en/LC_MESSAGES/django.po
@@ -274,7 +274,10 @@ msgid "APP-SEARCH-TEXT"
 msgstr "Search"
 
 msgid "APP-SEARCH-TYPE-AND-PRESS-ENTER"
-msgstr "Type and press Enter"
+msgstr "Type and press enter."
+
+msgid "APP-SEARCH-FILTER-TEXT"
+msgstr "Filter by title..."
 
 msgid "APP-FIRSTSEARCH-TEXT"
 msgstr "First Search"
